[package]
name = "chain"
version = "0.1.1"
authors = ["Joseph A Mark <sjeohp@gmail.com>"]
license = "MIT"
description = "chain"
repository = "https://github.com/sjeohp/rust-chain.git"
keywords = ["blockchain", "chain", "distributed", "ledger", "cryptocurrency"]

[dependencies]
ring = "*"
untrusted = "*"
byteorder = "*"

[lib]
name = "chain"
path = "src/lib.rs"
