[package]
name = "chain"
version = "0.1.1"
authors = ["J A Mark <sjeohp@gmail.com>"]
license = "MIT"
description = "chain"
repository = "https://github.com/sjeohp/rust-chain.git"
keywords = ["blockchain", "chain", "distributed", "ledger", "cryptocurrency"]

[dependencies]
ring = "0.4.3"
untrusted = "0.3.1"
byteorder = "0.5.3"

[lib]
name = "chain"
path = "src/lib.rs"
